[project]
name = "teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.6.3",
    "crewai>=0.100.0",
    "gtts>=2.5.4",
    "litellm>=1.57.4",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "sounddevice>=0.5.1",
    "streamlit>=1.41.1",
    "streamlit-audiorec>=0.1.3",
    "streamlit-bokeh-events>=0.1.2",
    "streamlit-webrtc>=0.47.9",
    "torch>=2.6.0",
    "wavio>=0.0.9",
    "whisper>=1.1.10",
]
