[project]
name = "teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.6.3",
    "crewai>=0.100.0",
    "ffmpeg>=1.4",
    "gtts>=2.5.4",
    "litellm>=1.57.4",
    "openai-whisper>=20240930",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "streamlit>=1.41.1",
    "streamlit-audiorec>=0.1.3",
    "torch>=2.6.0",
    "whisper>=1.1.10",
]
