[project]
name = "teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.6.3",
    "crewai>=0.100.0",
    "gtts>=2.5.4",
    "litellm>=1.57.4",
    "python-dotenv>=1.0.1",
    "remove",
    "scipy>=1.15.1",
    "streamlit>=1.41.1",
    "streamlit-audiorec>=0.1.3",
    "torch>=2.6.0",
]
